# sgcmsui

./: SGLibGUI.py  pyproject.toml  requirements.txt
controller/: assetcontroller.py  componentcontroller.py  configurationcontroller.py  contactcontroller.py  mdicontroller.py
controller/subcontroller/: bachmanncontroller.py  bkvcontroller.py  bkvscalarcontroller.py  wtgtypecontroller.py
controller/subcontroller/models/: bachmannchannelmodel.py  bkvscalarmodel.py
ui/: bachmanncms_dialog.py  bkvcms_dialog.py  cmsmanagermain.py  convert.bat  testdialog.py  wtg_gbx_dialog.py  wtgtype_dialog.py
ui/base/: dialog_bachmanncms.py  dialog_bkvcms.py  dialog_bkvscalar.py  dialog_wtg_gbx.py  dialog_wtgtype.py  dialogsitebase.py  mainwindowbase.py
ui/models/: bachmannchannelmodel.py
ui/pyside6/: dialog_bachmanncms.ui  dialog_bkvcms.ui  dialog_bkvscalar.ui  dialog_site.ui  dialog_wtg.ui  dialog_wtg_gbx.ui  dialog_wtgtype.ui  mainwindow.ui
