[tool.poetry]
name = "sgcmsui"
version = "0.1.0"
description = "Graphical user interface"
authors = ["SAGUT <sascha.gutt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyside6 = "^6.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
